# parser

./: .gitignore  CmakeLists.txt  LICENSE  Parser.sln  README.md  main.cpp
CommonGrammar/: CmakeLists.txt
CommonGrammar/include/: GrammarException.h  NonTerminal.h  Precedence.h  Production.h  Symbol.h
CommonGrammar/src/: GrammarException.cpp  NonTerminal.cpp  Precedence.cpp  Production.cpp  Symbol.cpp  Terminal.cpp
FileReader/: CmakeLists.txt
GenCode/: ElementTree.h  FileReader.cpp  FileReader.h  GenCode.vcxproj  GenCode.vcxproj.filters  Grammar.cpp  Grammar.h  GrammarBuilder.cpp  GrammarBuilder.h  GrammarException.h  LRItem.cpp  LRItem.h  LRTable.cpp  LRTable.h  Precedence.h  Production.cpp  Production.h  State.cpp  State.h  Symbol.cpp  Symbol.h  Terminal.h  TrajanAlgorithm.h  input.txt  main.cpp
Grammar/: CmakeLists.txt
Grammar/include/: Grammar.h  GrammarBuilder.h
Grammar/src/: Grammar.cpp  GrammarBuilder.cpp
ParseTable/: CmakeLists.txt
ParseTable/include/: LRItem.h  LRTable.h  State.h
ParseTable/src/: LRItem.cpp  LRTable.cpp  State.cpp
Parser/: CmakeLists.txt
Parser/include/: Parser.h
Parser/src/: ElementTree.cpp  Parser.cpp
StreamReader/: CmakeLists.txt
StreamReader/include/: StreamReader.h
StreamReader/src/: StreamReader.cpp
config/: CMakeLists.txt
example/: grammar.txt  input.txt
